--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       display: flex;
       align-items: center;
       padding: 10px 15px;
-      background-color: #007BFF;
+      background-color: #007bff;
       color: #fff;
     }
 
@@ -79,8 +79,8 @@
 
     button {
       background-color: #fff;
-      color: #007BFF;
-      border: 2px solid #007BFF;
+      color: #007bff;
+      border: 2px solid #007bff;
       border-radius: 4px;
       padding: 8px 12px;
       margin-top: 8px;
@@ -89,7 +89,7 @@
     }
 
     button:hover {
-      background-color: #007BFF;
+      background-color: #007bff;
       color: #fff;
     }
 
@@ -112,7 +112,7 @@
 
     .menu-item,
     .transaction-item {
-      border: 1px dashed #007BFF;
+      border: 1px dashed #007bff;
       border-radius: 4px;
       padding: 8px;
       margin-bottom: 8px;
@@ -176,7 +176,7 @@
       border: none;
       background: none;
       font-size: 14px;
-      color: #007BFF;
+      color: #007bff;
       cursor: pointer;
     }
 
@@ -286,6 +286,7 @@
         <select id="participantSettlementSelect">
           <option value="">Select Participant</option>
         </select>
+        <button id="downloadAllSettlementsPDF">Download All Settlements as PDF</button>
         <div id="participantSettlementResult">
           <!-- Detailed settlement for the selected participant will appear here -->
         </div>
@@ -300,6 +301,8 @@
     <button class="nav-btn" data-page="page-settlement">Settlement</button>
   </nav>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
     // Helper function to format amounts in Indonesian Rupiah.
     function formatCurrency(amount) {
@@ -660,62 +663,92 @@
       let detailsHtml = '';
       transactions.forEach(trans => {
         // Check if participant is involved (as payer or in any menu's sharing list).
-        let involved = (parseInt(trans.payerId) === participantId) ||
-          trans.menus.some(menu => menu.sharing.includes(participantId));
+        let involved = (parseInt(trans.payerId) === participantId) || trans.menus.some(menu => menu.sharing.includes(participantId));
         if (!involved) return;
 
-        let baseTotal = 0;
-        trans.menus.forEach(menu => { baseTotal += menu.price * menu.quantity; });
-        if (baseTotal === 0) return;
-        let discountApplied = 0;
-        if (trans.discountType === "percentage") discountApplied = baseTotal * (trans.discountValue / 100);
-        else if (trans.discountType === "flat") discountApplied = trans.discountValue;
-        let effectiveSubtotal = baseTotal - discountApplied;
-        if (effectiveSubtotal < 0) effectiveSubtotal = 0;
-        let tax, finalTotal;
-        if (trans.discountApplicationOrder === "before") {
-          tax = effectiveSubtotal * (trans.taxPercentage / 100);
-          finalTotal = effectiveSubtotal + tax + trans.serviceAmount;
-        } else {
-          tax = baseTotal * (trans.taxPercentage / 100);
-          finalTotal = baseTotal + tax + trans.serviceAmount - discountApplied;
-        }
-        // Compute per-transaction balances.
-        let trBalances = {};
-        participants.forEach(p => { trBalances[p.id] = 0; });
-        trBalances[trans.payerId] += finalTotal;
-        trans.menus.forEach(menu => {
-          const menuTotal = menu.price * menu.quantity;
-          const allocatedValue = (menuTotal / baseTotal) * finalTotal;
-          const shareCount = menu.sharing.length;
-          if (shareCount > 0) {
-            const shareValue = allocatedValue / shareCount;
-            menu.sharing.forEach(pid => { trBalances[pid] -= shareValue; });
+        if (parseInt(trans.payerId) === participantId) {
+          detailsHtml += `<h4>${trans.name} (You are the payer)</h4>`;
+          // Calculate baseTotal, discount, tax, and finalTotal for payer
+          let baseTotal = 0;
+          trans.menus.forEach(menu => { baseTotal += menu.price * menu.quantity; });
+          let discountApplied = 0;
+          if (trans.discountType === "percentage") discountApplied = baseTotal * (trans.discountValue / 100);
+          else if (trans.discountType === "flat") discountApplied = trans.discountValue;
+          let effectiveSubtotal = baseTotal - discountApplied;
+          if (effectiveSubtotal < 0) effectiveSubtotal = 0;
+          let tax, finalTotal;
+          if (trans.discountApplicationOrder === "before") {
+            tax = effectiveSubtotal * (trans.taxPercentage / 100);
+            finalTotal = effectiveSubtotal + tax + trans.serviceAmount;
+          } else {
+            tax = baseTotal * (trans.taxPercentage / 100);
+            finalTotal = baseTotal + tax + trans.serviceAmount - discountApplied;
           }
-        });
-        const participantNet = trBalances[participantId];
-        detailsHtml += `<h4>${trans.name} - Final Total: ${formatCurrency(finalTotal)}</h4>`;
-        detailsHtml += `<p>Base Total: ${formatCurrency(baseTotal)} | Discount: ${trans.discountType === "percentage" ? trans.discountValue + "%" : formatCurrency(discountApplied)}<br>
-                        Tax: ${trans.taxPercentage}% | Service: ${formatCurrency(trans.serviceAmount)}</p>`;
-        detailsHtml += `<p>Your net amount in this transaction: ${formatCurrency(participantNet)}</p>`;
-        // List menus where participant is involved.
-        detailsHtml += '<table class="summary-table"><tr><th>Menu Item</th><th>Unit Price</th><th>Quantity</th><th>Total</th><th>Your Share</th></tr>';
-        trans.menus.forEach(menu => {
-          if (menu.sharing.includes(participantId)) {
+          detailsHtml += `<p>You paid a total of ${formatCurrency(finalTotal)} for this transaction.</p>`;
+          // List participant names involved in the transaction
+          const involvedNames = [];
+          trans.menus.forEach(menu => {
+            menu.sharing.forEach(pid => {
+              if (!involvedNames.includes(getName(pid))) {
+                involvedNames.push(getName(pid));
+              }
+            });
+          });
+          detailsHtml += `<p>Participants involved: ${involvedNames.join(', ')}</p>`;
+        } else {
+          let baseTotal = 0;
+          trans.menus.forEach(menu => { baseTotal += menu.price * menu.quantity; });
+          if (baseTotal === 0) return;
+          let discountApplied = 0;
+          if (trans.discountType === "percentage") discountApplied = baseTotal * (trans.discountValue / 100);
+          else if (trans.discountType === "flat") discountApplied = trans.discountValue;
+          let effectiveSubtotal = baseTotal - discountApplied;
+          if (effectiveSubtotal < 0) effectiveSubtotal = 0;
+          let tax, finalTotal;
+          if (trans.discountApplicationOrder === "before") {
+            tax = effectiveSubtotal * (trans.taxPercentage / 100);
+            finalTotal = effectiveSubtotal + tax + trans.serviceAmount;
+          } else {
+            tax = baseTotal * (trans.taxPercentage / 100);
+            finalTotal = baseTotal + tax + trans.serviceAmount - discountApplied;
+          }
+          // Compute per-transaction balances.
+          let trBalances = {};
+          participants.forEach(p => { trBalances[p.id] = 0; });
+          trBalances[trans.payerId] += finalTotal;
+          trans.menus.forEach(menu => {
             const menuTotal = menu.price * menu.quantity;
             const allocatedValue = (menuTotal / baseTotal) * finalTotal;
             const shareCount = menu.sharing.length;
-            const yourShare = allocatedValue / shareCount;
-            detailsHtml += `<tr>
-                            <td>${menu.itemName}</td>
-                            <td>${formatCurrency(menu.price)}</td>
-                            <td>${menu.quantity}</td>
-                            <td>${formatCurrency(menuTotal)}</td>
-                            <td>${formatCurrency(yourShare)}</td>
-                           </tr>`;
-          }
-        });
-        detailsHtml += '</table>';
+            if (shareCount > 0) {
+              const shareValue = allocatedValue / shareCount;
+              menu.sharing.forEach(pid => { trBalances[pid] -= shareValue; });
+            }
+          });
+          const participantNet = trBalances[participantId];
+          detailsHtml += `<h4>${trans.name} - Final Total: ${formatCurrency(finalTotal)}</h4>`;
+          detailsHtml += `<p>Base Total: ${formatCurrency(baseTotal)} | Discount: ${trans.discountType === "percentage" ? trans.discountValue + "%" : formatCurrency(discountApplied)}<br>
+                            Tax: ${trans.taxPercentage}% | Service: ${formatCurrency(trans.serviceAmount)}</p>`;
+          detailsHtml += `<p>Your net amount in this transaction: ${formatCurrency(participantNet)}</p>`;
+          // List menus where participant is involved.
+          detailsHtml += '<table class="summary-table"><tr><th>Menu Item</th><th>Unit Price</th><th>Quantity</th><th>Total</th><th>Your Share</th></tr>';
+          trans.menus.forEach(menu => {
+            if (menu.sharing.includes(participantId)) {
+              const menuTotal = menu.price * menu.quantity;
+              const allocatedValue = (menuTotal / baseTotal) * finalTotal;
+              const shareCount = menu.sharing.length;
+              const yourShare = allocatedValue / shareCount;
+              detailsHtml += `<tr>
+                                <td>${menu.itemName}</td>
+                                <td>${formatCurrency(menu.price)}</td>
+                                <td>${menu.quantity}</td>
+                                <td>${formatCurrency(menuTotal)}</td>
+                                <td>${formatCurrency(yourShare)}</td>
+                              </tr>`;
+            }
+          });
+          detailsHtml += '</table>';
+        }
       });
 
       // Overall settlement instructions for participant based on individual transactions.
@@ -883,7 +916,7 @@
 
 
       // Generate detailed settlement instructions for the participant
-      let settlementInstr = '<h3>Your Detailed Settlement Instructions</h3>';
+      let settlementInstr = `<h3>${getName(participantId)}'s Split Bill Summary</h3>`;
       if (partSettlements.length === 0) {
         settlementInstr += '<p>No settlement needed. Your balance is zero.</p>';
       } else {
@@ -900,7 +933,7 @@
         settlementInstr += '</table>';
       }
 
-      return `<h3>Your Detailed Settlement Instructions</h3>`
+      return `<br><h3>Detailed Settlement Instructions</h3>`
         + detailsHtml + settlementInstr;
 
     }
@@ -938,6 +971,37 @@
 
     // Initialize options on load.
     updateParticipantOptions();
+
+    document.getElementById('downloadAllSettlementsPDF').addEventListener('click', async function () {
+      const { jsPDF } = window.jspdf;
+      for (const p of participants) {
+        const htmlContent = generateParticipantSettlement(p.id);
+
+        // Create a temporary container for HTML
+        const tempDiv = document.createElement('div');
+        tempDiv.innerHTML = htmlContent;
+        document.body.appendChild(tempDiv);
+
+        // Create a new jsPDF instance
+        const pdf = new jsPDF({
+          orientation: 'portrait',
+          unit: 'mm',
+          format: 'a4'
+        });
+
+        // Use jsPDF's html() method to render HTML content including tables
+        await pdf.html(tempDiv, {
+          x: 10,
+          y: 10,
+          width: 180,
+          windowWidth: 800,
+          callback: function () {
+            pdf.save(`Settlement_${p.name.replace(/\s+/g, '_')}.pdf`);
+            document.body.removeChild(tempDiv);
+          }
+        });
+      }
+    });
   </script>
 </body>
 
